//新增跑馬燈

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -3193,6 +3193,10 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .header {
     height: 30px;
   }
+  .newsTicker {
+    height: 25px;
+    font-size: 0.5rem;
+  }
   .announcement-container {
     width: 500px;
     top: 52%;
