--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -945,6 +945,10 @@
   .header {
     height: 30px;
   }
+  .newsTicker{
+    height:25px;
+    font-size: 0.5rem;
+  }
   .announcement-container{
     width:500px;
     top:52%;
