//新增在線人數

--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -53,9 +53,8 @@
         background-color:rgba(128, 0, 128, 0.829);
     }
     .bettingArea-btn-betInfo{
-        height:42px;
         border-radius: 5px;
-        background-color: rgb(75, 73, 73);
+        background-color: #644d31;
         font-size: 18px;
         text-align: center;
     }
