--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -841,9 +841,8 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .bettingArea-btn-betInfo {
-  height: 42px;
   border-radius: 5px;
-  background-color: #4b4949;
+  background-color: #644d31;
   font-size: 18px;
   text-align: center;
 }
