--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -351,6 +351,7 @@ img {
      頁底設定區
 -------------------------------------------*/
 .footer {
+  z-index: 1;
   background: #331d02;
   /* Old browsers */
   /* FF3.6-15 */
