--- a/src/assets/css/scss/components/_newsTicker.scss
+++ b/src/assets/css/scss/components/_newsTicker.scss
@@ -2,4 +2,8 @@
     background-color: rgba(128, 128, 128, 0.178);
     height:50px;
     overflow: hidden;
+    .bi-exclamation-triangle-fill{
+        color:yellow;
+        font-size: 1.5rem;
+    }
 }
