--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -13,6 +13,7 @@
 @import './scss/layout/footer';
 @import './scss/layout/tableInfo';
 //component
+@import './scss/components/reward';
 @import './scss/components/newsTicker';
 @import './scss/components/announcement';
 @import './scss/components/betLimitInfo';
