--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -401,6 +401,14 @@ img {
   background-color: black;
 }
 
+.chatDisplay {
+  width: 250px;
+  height: 200px;
+  background-color: transparent;
+  overflow: hidden;
+  border: 2px solid red;
+}
+
 .reward .modal-content {
   max-width: 300px;
   margin-left: auto;
@@ -547,6 +555,11 @@ img {
 .video-box .video {
   width: 100%;
   height: 100%;
+}
+
+.chatElement {
+  left: 0;
+  bottom: 0;
 }
 
 .progress {
