新增聊天室訊息輸入(包含打賞提示)、訊息動畫

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -409,6 +409,14 @@ img {
   border: 2px solid red;
 }
 
+.rewardMsg {
+  color: yellow;
+}
+
+.chatMsg {
+  bottom: 0;
+}
+
 .reward .modal-content {
   max-width: 300px;
   margin-left: auto;
