--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -15,6 +15,7 @@
 //component
 @import './scss/components/chatInput';
 @import './scss/components/chatDisplay';
+@import './scss/components/emoji';
 @import './scss/components/reward';
 @import './scss/components/newsTicker';
 @import './scss/components/announcement';
