--- a/src/assets/css/scss/components/_emoji.scss
+++ b/src/assets/css/scss/components/_emoji.scss
@@ -1,5 +1,8 @@
 .emojiList{
-    background-color: black;
+    // background-color: black;
+    background-color: #2c2215;
+    border: #644d31 2px solid;
+    border-radius: 10px;
 }
 .emoji{
     cursor: pointer;
