--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -50,6 +50,9 @@
   .gameHistory {
     height: 25%;
   }
+  .chatInput-emoji{
+    top:-235px;
+}
   .coinArea {
     height: 21%;
   }
@@ -1029,6 +1032,9 @@
   .alertFont {
     font-size: 1.5rem !important;
   }
+  .chatInput-emoji{
+    left:-50%;
+  }
   .betArea-mobile,
   .betArea-mobile-container {
     height: 100px;
@@ -1301,6 +1307,7 @@
   }
 }
 @media screen and (max-width: 414px) {
+  
   .gameResultLoading {
     top: 25%;
     font-size: 40%;
@@ -1482,6 +1489,12 @@
   .userBetInfo-title {
     font-size: 1rem;
   }
+  .chatInput-emoji{
+    left: -55%;
+  } 
+  .footer-item{
+    margin-left: 0;
+  }
   .coin-100 {
     @include coinSpritePosition(0, 0, 0.6);
   }
@@ -1570,7 +1583,31 @@
     @include coinSpritePosition(-553,-130,0.6);
   }
 }
+@media screen and (max-width: 345px){
+  .chatInput-emoji{
+    left:-70%;
+  } 
+  .chat-input-wrap{
+    width:160px;
+  }
+  .chat-input{
+    input{
+      width:120px;
+    }
+  }
+}
 @media screen and (max-width: 320px) {
+  .chat-input-wrap{
+    width:120px;
+  }
+  .chatInput-emoji{
+    left: -84%
+  } 
+  .chat-input {
+    input{
+      width:85px;
+    }
+  }
   .header {
     height: 30px;
   }
@@ -1754,6 +1791,9 @@
   .tableItem{
     width:230px;
   }
+  .chatInput-emoji{
+    left: -97%;
+}
   .announcement-container{
     width:250px;
     height:653px;
