--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+/*一般工具*/
+.cursor-point {
+  cursor: pointer;
+}
+
 .roadImg-preLoad, .BeadPlate-B, .BeadPlate-B-BPair, .BeadPlate-B-PPair, .BeadPlate-B-BothPair, .BeadPlate-P, .BeadPlate-P-BPair, .BeadPlate-P-PPair, .BeadPlate-P-BothPair, .BeadPlate-T, .BeadPlate-T-BPair, .BeadPlate-T-PPair, .BeadPlate-T-BothPair, .big-B, .big-B-BPair, .big-B-PPair, .big-B-BothPair, .big-BT, .big-BT-BPair, .big-BT-PPair, .big-BT-BothPair, .big-P, .big-P-BPair, .big-P-PPair, .big-P-BothPair, .big-PT, .big-PT-BPair, .big-PT-PPair, .big-PT-BothPair, .small-red, .small-blue, .bigEye-red, .bigEye-blue, .cockroach-red, .cockroach-blue, .small-red-ask, .small-blue-ask, .bigEye-red-ask, .bigEye-blue-ask, .cockroach-red-ask, .cockroach-blue-ask {
   cursor: pointer;
   background-image: url("../../images/road-sprite.png");
@@ -451,14 +456,14 @@ img {
   max-width: 300px;
   margin-left: auto;
   margin-right: auto;
-  border: 5px solid #644d31;
+  border: 2px solid #644d31;
   -webkit-box-shadow: 0px 0px 10px red;
           box-shadow: 0px 0px 10px red;
-  background-color: #ffd236;
+  background: #331d02;
 }
 
 .reward .modal-header, .reward .modal-body, .reward .modal-footer {
-  background-color: #ffd236;
+  background: #331d02;
 }
 
 .reward .modal-header, .reward .modal-footer {
@@ -470,9 +475,9 @@ img {
   right: 0%;
   cursor: pointer;
   border-radius: 100%;
-  background-color: #ffd236;
+  background: #331d02;
   opacity: 1;
-  border: 5px solid #644d31;
+  border: 2px solid #644d31;
   font-size: 2rem;
 }
 
@@ -485,15 +490,19 @@ img {
   opacity: 1;
 }
 
+.reward-title {
+  color: white;
+}
+
 .reward-btn {
   border-radius: 5px;
-  background-color: orange;
+  background-color: #ffd236;
 }
 
 .totalReward {
   min-width: 78px;
   border-radius: 5px;
-  background-color: orange;
+  background-color: #ffd236;
   color: red;
 }
 
@@ -502,7 +511,8 @@ img {
 }
 
 .reward-confirm-btn {
-  background-color: #644d31;
+  background: -webkit-gradient(linear, left top, left bottom, from(#775124), to(#ae8b27));
+  background: linear-gradient(to bottom, #775124 0%, #ae8b27 100%);
   border: none;
   color: white;
 }
@@ -1004,11 +1014,16 @@ a.btn.disabled, fieldset[disabled] a.btn {
   background-color: rgba(128, 0, 128, 0.829);
 }
 
-.bettingArea-btn-betInfo {
+.bettingArea-btn-betInfo, .bettingArea-btn-reward {
   border-radius: 5px;
   background-color: #644d31;
   font-size: 18px;
   text-align: center;
+}
+
+.bettingArea-btn-reward {
+  height: 42px;
+  background-color: rgba(128, 0, 128, 0.829);
 }
 
 .betArea-item {
@@ -1035,12 +1050,10 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 .askRoad-player {
   color: red;
-  cursor: pointer;
 }
 
 .askRoad-banker {
   color: yellow;
-  cursor: pointer;
 }
 
 .shotCoinUl {
@@ -2431,6 +2444,12 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
 }
 
+@media screen and (max-width: 1280px) and (max-height: 800px) {
+  .coinArea {
+    height: 9%;
+  }
+}
+
 @media screen and (min-width: 1025px) {
   .header-bottom-mobil {
     display: none !important;
@@ -2442,6 +2461,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
     padding-top: 10px;
     padding-bottom: 10px;
   }
+  .bettingArea-btn-betrule {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -2452,6 +2474,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
     left: 50%;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
+  }
+  .bettingArea-btn-reward {
+    height: auto;
   }
   #betConfirm, #cancleBet {
     position: absolute;
@@ -3037,7 +3062,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
     bottom: 5%;
   }
   .bettingArea-btn-betInfo {
-    font-size: 16px;
+    font-size: 14px;
   }
   .betRatioText {
     font-size: 1rem;
@@ -3495,6 +3520,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .betStatus,
   .table-total-betStatus {
     font-size: 0.5rem;
+  }
+  .bettingArea-btn-betInfo {
+    font-size: 12px;
   }
   .alertFont {
     font-size: 1.5rem !important;
@@ -4372,10 +4400,13 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .bettingArea-btn-left {
     width: 65%;
   }
-  .bettingArea-btn-gitbackAllCoin {
-    width: auto;
-    font-size: 12px;
-    padding: 2px;
+  .bettingArea-btn-reward {
+    width: 25px;
+  }
+  .bettingArea-btn-gitbackAllCoin,
+  .bettingArea-btn-check {
+    width: 40px;
+    font-size: 10px;
   }
   .bettingArea-btn {
     height: 50px;
@@ -4595,10 +4626,11 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .bettingArea-btn-left {
     width: 62%;
   }
-  .bettingArea-btn-gitbackAllCoin,
-  .bettingArea-btn-check {
-    font-size: 10px;
-    width: 55px;
+  .bettingArea-btn-check, .bettingArea-btn-gitbackAllCoin {
+    width: 30px;
+  }
+  .bettingArea-btn-check .bi, .bettingArea-btn-gitbackAllCoin .bi {
+    display: none;
   }
   .coin-100 {
     width: 39.5px;
