--- a/src/assets/css/scss/components/_reward.scss
+++ b/src/assets/css/scss/components/_reward.scss
@@ -3,12 +3,16 @@
         max-width:300px;
         margin-left: auto;
         margin-right: auto;
-        border:5px solid #644d31;
+        border:2px solid #644d31;
         box-shadow: 0px 0px 10px red;
-        background-color: #ffd236;
+        // background-color: orange;
+        // background-color: #ffd236;
+        background: #331d02;
     }
     .modal-header,.modal-body,.modal-footer{
-        background-color: #ffd236;
+        // background-color: orange;
+        // background-color: #ffd236;
+        background: #331d02;
     }
     .modal-header,.modal-footer{
         border:none;
@@ -18,9 +22,11 @@
         right:0%;
         cursor: pointer;
         border-radius: 100%;
-        background-color: #ffd236;
+        // background-color: orange;
+        // background-color: #ffd236;
+        background: #331d02;
         opacity: 1;
-        border:5px solid #644d31;
+        border:2px solid #644d31;
         font-size: 2rem;
         div{
             color:#644d31;
@@ -31,21 +37,27 @@
         opacity: 1;
     }
 }
+.reward-title{
+    color:white;
+}
 .reward-btn{
     border-radius: 5px;
-    background-color: orange;
+    // background-color: orange;
+    background-color: #ffd236;
 }
 .totalReward{
     min-width:78px;
     border-radius: 5px;
-    background-color: orange;
+    // background-color: orange;
+    background-color: #ffd236;
     color:red;
 }
 .noreward{
     color:black;
 }
 .reward-confirm-btn{
-    background-color:#644d31;
+    // background-color:#644d31;
+    background: linear-gradient(to bottom, #775124 0%, #ae8b27 100%);
     border:none;
     color:white;
 }
