--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -308,6 +308,11 @@
     @include tieNumberPosition(-700, 0, 0.15);
   }
 }
+@media screen and (max-width: 1280px) and (max-height:800px){
+  .coinArea {
+    height: 9%;
+  }
+}
 @media screen and (min-width: 1025px) {
   .header-bottom-mobil {
     display: none !important;
@@ -319,6 +324,9 @@
     padding-top: 10px;
     padding-bottom: 10px;
   }
+  .bettingArea-btn-betrule{
+    display: none !important;
+  }
 }
 @media screen and (max-width: 1024px) {
   .header {
@@ -327,6 +335,9 @@
   .betError{
     left: 50%;
     transform: translateX(-50%);
+  }
+  .bettingArea-btn-reward{
+    height:auto;
   }
   #betConfirm,#cancleBet{
     position: absolute;
@@ -726,7 +737,7 @@
     bottom: 5%;
   }
   .bettingArea-btn-betInfo {
-    font-size: 16px;
+    font-size: 14px;
   }
   .betRatioText {
     font-size: 1rem;
@@ -1028,6 +1039,9 @@
   .betStatus,
   .table-total-betStatus {
     font-size: 0.5rem;
+  }
+  .bettingArea-btn-betInfo {
+    font-size: 12px;
   }
   .alertFont {
     font-size: 1.5rem !important;
@@ -1663,10 +1677,12 @@
   .bettingArea-btn-left {
     width: 65%;
   }
-  .bettingArea-btn-gitbackAllCoin {
-    width: auto;
-    font-size: 12px;
-    padding: 2px;
+  .bettingArea-btn-reward{
+    width:25px;
+  }
+  .bettingArea-btn-gitbackAllCoin,.bettingArea-btn-check {
+    width: 40px;
+    font-size: 10px;
   }
   .bettingArea-btn {
     height: 50px;
@@ -1843,9 +1859,11 @@
   .bettingArea-btn-left{
     width:62%;
   }
-  .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check{
-    font-size: 10px;
-    width:55px;
+  .bettingArea-btn-check,.bettingArea-btn-gitbackAllCoin{
+    width:30px;
+    .bi{
+      display: none;
+    }
   }
   .coin-100 {
     @include coinSpritePosition(0, 0, 0.5);
