--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -59,7 +59,9 @@
         text-align: center;
     }
     .bettingArea-btn-reward{
-        height:42px;
+        width:80px;
+        // height:42px;
+        font-size: 1.5rem;
         // background-color: rgb(71, 71, 2);
         background-color:rgba(128, 0, 128, 0.829);
     }
