--- a/src/assets/css/scss/components/_reward.scss
+++ b/src/assets/css/scss/components/_reward.scss
@@ -1,6 +1,7 @@
 .reward{
     .modal-content{
         max-width:300px;
+        height:300px;
         margin-left: auto;
         margin-right: auto;
         border:2px solid #644d31;
@@ -16,6 +17,13 @@
     }
     .modal-header,.modal-footer{
         border:none;
+    }
+    .rewardError{
+        text-align: center;
+        p{
+            color:red;
+            margin-bottom: 0;
+        }
     }
     .close{
         top:0%;
