--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -427,6 +427,14 @@ img {
   top: -259px;
 }
 
+.chatInput-erroeMsg {
+  color: red;
+}
+
+.chatInput-erroeMsg li {
+  left: 5%;
+}
+
 .chatDisplay {
   width: 250px;
   height: 200px;
@@ -454,7 +462,7 @@ img {
 
 .reward .modal-content {
   max-width: 300px;
-  height: 300px;
+  height: 260px;
   margin-left: auto;
   margin-right: auto;
   border: 2px solid #644d31;
