--- a/src/assets/css/scss/components/_chatInput.scss
+++ b/src/assets/css/scss/components/_chatInput.scss
@@ -27,3 +27,10 @@
     width:300px;
     top:-259px;
 }
+.chatInput-erroeMsg{
+    color:red;
+    li{
+        left:5%;
+    }
+    // border: 1px solid red;
+}
