修改BettingArea的打賞按鈕RWD

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1041,6 +1041,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 .bettingArea-btn-reward {
   width: 80px;
+  height: 42px;
   font-size: 1.5rem;
   background-color: rgba(128, 0, 128, 0.829);
 }
