--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -60,7 +60,7 @@
     }
     .bettingArea-btn-reward{
         width:80px;
-        // height:42px;
+        height:42px;
         font-size: 1.5rem;
         // background-color: rgb(71, 71, 2);
         background-color:rgba(128, 0, 128, 0.829);
