--- a/src/assets/css/scss/base/_base.scss
+++ b/src/assets/css/scss/base/_base.scss
@@ -18,6 +18,7 @@ img{
 	max-width:100%;
 	height:auto;
 }
+::-webkit-scrollbar { width: 0 !important }  //隱藏滾動條
 .font_red{
 	color: $betArea_red;
 }
