--- a/src/assets/css/scss/layout/_home.scss
+++ b/src/assets/css/scss/layout/_home.scss
@@ -1,6 +1,7 @@
 .home{
     overflow: scroll;
 }
+.home::-webkit-scrollbar { width: 0 !important;height:0 !important }  //隱藏滾動條
 .tableItem{
     cursor: pointer;
     border: 5px solid $mainColor;
@@ -18,6 +19,6 @@
     width:200px;
     height:200px;
 }
-.chooseTable{
-    margin-top: 50px;
-}
+// .chooseTable{
+//     margin-top: 50px;
+// }
