--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -111,7 +111,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 865px;
 }
 
 .table-img {
@@ -2510,6 +2509,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
 @media screen and (max-width: 1024px) {
   .header {
     background-image: none;
+  }
+  .home {
+    width: 100%;
   }
   .leaveGame-btn {
     -webkit-box-ordinal-group: 0;
