--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -308,9 +308,12 @@
     @include tieNumberPosition(-700, 0, 0.15);
   }
 }
-@media screen and (max-width: 1280px) and (max-height:800px){
+@media screen and (max-width: 1280px) and (height:800px){
   .coinArea {
     height: 9%;
+  }
+  .bettingArea-btn-reward{
+    width:25px;
   }
 }
 @media screen and (min-width: 1025px) {
@@ -421,9 +424,6 @@
   .betArea {
     border: 2px solid #262626;
     width: 100%;
-  }
-  .bettingArea-btn-left {
-    width: 80%;
   }
   .betArea-pc {
     display: none;
@@ -1387,8 +1387,8 @@
   .betArea-item-bottom {
     bottom: 0%;
   }
-  .bettingArea-btn-left {
-    width: 70%;
+  .bettingArea-btn-reward{
+    width:25px;
   }
   .header-userName {
     font-size: 0.5rem;
@@ -1687,12 +1687,6 @@
   .betArea {
     height: 230px;
   }
-  .bettingArea-btn-left {
-    width: 65%;
-  }
-  .bettingArea-btn-reward{
-    width:25px;
-  }
   .bettingArea-btn-gitbackAllCoin,.bettingArea-btn-check {
     width: 40px;
     font-size: 10px;
@@ -1872,15 +1866,15 @@
   .betArea-mobile-container {
     height: 160px;
   }
-  .bettingArea-btn-left{
-    width:62%;
-  }
   .bettingArea-btn-check,.bettingArea-btn-gitbackAllCoin{
-    width:30px;
+    width:26px;
     .bi{
       display: none;
     }
   }
+  .bettingArea-btn-reward {
+    width: 20px;
+}
   .coin-100 {
     @include coinSpritePosition(0, 0, 0.5);
   }
