--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -13,6 +13,7 @@
 @import './scss/layout/footer';
 @import './scss/layout/tableInfo';
 //component
+@import './scss/components/watchCardBox';
 @import './scss/components/chatInput';
 @import './scss/components/chatDisplay';
 @import './scss/components/emoji';
